# fednerf

./: .gitignore  Nerf_code_Workflow.md  Nerf_code_Workflow.txt  README.md  aggregated_metrics.csv  final_model.pt  pyproject.toml  test.py
configs/: Synthetic_Objectsv0.1.yaml  colosseum_1.yaml  obj_syn.yaml  objects.yaml
fednerf/: __init__.py  client_app.py  my_strategy.py  server_app.py  task.py
fednerf/fednerf_utils/: __init__.py  client_utils.py  fl_run_nerf.py  fl_run_nerf_helpers.py  load_LINEMOD.py  load_blender.py  load_deepvoxels.py  load_llff.py  server_utils.py
