# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fednerf"
version = "1.0.0"
description = ""
license = "Apache-2.0"
# Dependencies for your Flower App
dependencies = [
    "flwr[simulation]>=1.22.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "imageio==2.9.0",
    "imageio-ffmpeg==0.6.0",
    "configargparse==1.7.1",
    "opencv-python==4.12.0.88",
    "tensorboard>=2.0",
    "numpy==2.2.6",
    "omegaconf==2.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "shreyas"

# Point to your ServerApp and ClientApp objects
[tool.flwr.app.components]
serverapp = "fednerf.server_app:app"
clientapp = "fednerf.client_app:app"

# Custom config values accessible via `context.run_config`
[tool.flwr.app.config]
num-server-rounds = 3
fraction-train = 1
local-epochs = 1
lr = 0.01

# Default federation to use when running the app
[tool.flwr.federations]
default = "local-simulation"

# Local simulation federation with 10 virtual SuperNodes
[tool.flwr.federations.local-simulation]
options.num-supernodes = 3
options.backend.client-resources.num-cpus = 1
options.backend.client-resources.num-gpus = 0.5
# options.backend.client-resources.num-gpus = 0.5

# Remote federation example for use with SuperLink
#[tool.flwr.federations.remote-federation]
#address = "<SUPERLINK-ADDRESS>:<PORT>"
#insecure = true  # Remove this line to enable TLS
# root-certificates = "<PATH/TO/ca.crt>"  # For TLS setup
